fix: header and footer for mobile overflow

--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
 
+/* * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+} */
+
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0 auto;
@@ -29,6 +35,7 @@ header {
   align-content: center;
   align-items: center;
   padding: 0 20px;
+  flex-wrap: wrap;
 }
 
 .logo {
@@ -344,14 +351,14 @@ header {
 
 footer {
   background-color: #141414;
-  padding: 104px 30px 32px;
+  /* padding: 104px 30px 32px; */
   color: #ffffff;
 }
 
 .inner-footer {
-  height: 343px;
+  /* height: 343px;
   margin-left: 151px;
-  margin-right: 151px;
+  margin-right: 151px; */
 }
 
 .footer-content {
@@ -490,9 +497,6 @@ a:link {
 }
 
 .footer-endLinks {
-  display: flex;
-  gap: 7%;
-  width: 380px;
 }
 
 .footer-endLink1 {
@@ -528,9 +532,6 @@ a:link {
   .footer-appLinks {
     flex-direction: column;
   }
-  .footer-bottomBar {
-    width: 1100px;
-  }
 }
 
 @media screen and (max-width: 1350px) {
@@ -542,9 +543,6 @@ a:link {
   }
   .footer-appLinks {
     flex-direction: column;
-  }
-  .footer-bottomBar {
-    width: 900px;
   }
 }
 
@@ -558,6 +556,7 @@ a:link {
   .nav2 {
     justify-content: center;
     padding-top: 20px;
+    flex-wrap: wrap;
   }
 }
 
@@ -575,12 +574,6 @@ a:link {
   }
   .footer-app {
     width: 200px;
-  }
-
-  .footer-bottomBar {
-    width: 700px;
-    height: 48px;
-    flex-wrap: wrap;
   }
 }
 
@@ -612,11 +605,6 @@ a:link {
   }
   .footer-appLinks {
     flex-direction: column;
-  }
-  .footer-bottomBar {
-    width: 500px;
-    height: 48px;
-    flex-wrap: wrap;
   }
   .footer-info-content {
     display: none;
